<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity" >


    <ImageView
        android:id="@+id/moreDetails"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_home"
        android:background="@drawable/card_back_btn"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="-10dp"
        android:contentDescription="@string/todo_1"
        android:rotation="-10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_assest1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moreDetails" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/foodie"
        android:textColor="@color/purple_500"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/which_indian_food_would_you_live_to_cook"
        android:textSize="17sp"
        android:textColor="#424242"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="none"
        android:focusable="false"
        android:hint="@string/search_recipe"
        android:textSize="17sp"
        android:paddingStart="47dp"
        android:textColorHint="#5A5858"
        android:background="@drawable/searchview"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/todo_2"
        android:importantForAccessibility="no"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/search_ic"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/poppins"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="135dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/salad"
                style="@style/my_Style"
                android:background="@drawable/category_card_bc"
                android:contentDescription="@string/todo_3"
                app:srcCompat="@drawable/category_salad" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/salad"
                android:layout_alignStart="@+id/salad"
                android:layout_alignEnd="@+id/salad"
                android:layout_marginStart="24dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="-23dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/salad"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/mainDish"
                style="@style/my_Style"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/salad"
                android:background="@drawable/category_card_bc"
                android:contentDescription="@string/todo_3"
                app:srcCompat="@drawable/drinks" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mainDish"
                android:layout_alignStart="@+id/mainDish"
                android:layout_alignEnd="@+id/mainDish"
                android:layout_marginStart="24dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="-23dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/main"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/drinks"
                style="@style/my_Style"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/mainDish"
                android:background="@drawable/category_card_bc"
                android:contentDescription="@string/todo_3"
                app:srcCompat="@drawable/catergory_drinks" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/drinks"
                android:layout_alignStart="@+id/drinks"
                android:layout_alignEnd="@+id/drinks"
                android:layout_marginStart="24dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="-23dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/drinks"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/desserts"
                style="@style/my_Style"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/drinks"
                android:background="@drawable/category_card_bc"
                android:contentDescription="@string/todo_3"
                app:srcCompat="@drawable/category_dessert" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/desserts"
                android:layout_alignStart="@+id/desserts"
                android:layout_alignEnd="@+id/desserts"
                android:layout_marginStart="1dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-23dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/desserts"
                android:textColor="@color/black" />


        </RelativeLayout>

    </HorizontalScrollView>


    <TextView
        android:id="@+id/textView11"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/popular_recipe"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/search"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_popular"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:listitem="@layout/popular_rv_item"/>


</androidx.constraintlayout.widget.ConstraintLayout>