<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="20dp"
    android:background="@drawable/card_shape">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="15dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/pizza_sample"
            tools:ignore="ContentDescription" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/cat_tittle"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_is_here_you_can_see_this_text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/poppins_light"
        android:maxLength="40"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/todo_5"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cat_tittle"
        app:srcCompat="@drawable/clock_icon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/_30_mins_1"
        android:textColor="@color/black"
         android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/cat_tittle" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="5dp"
        android:padding="5dp"
        app:tint="#019267"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card_btn"
        tools:ignore="ContentDescription" />




</androidx.constraintlayout.widget.ConstraintLayout>