<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity"
    app:layoutDescription="@xml/activity_recipe_scene">

    <ImageView
        android:id="@+id/item_img"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="#F6F6F6"
        android:scaleType="centerCrop"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_sample"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/shade"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/item_img"
        app:layout_constraintEnd_toEndOf="@+id/item_img"
        app:layout_constraintStart_toStartOf="@+id/item_img"
        app:srcCompat="@drawable/image_btm_overlay"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp"
        android:foregroundGravity="center"
        android:hapticFeedbackEnabled="true"
        android:background="@drawable/card_back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_img"
        app:srcCompat="@drawable/back_icon"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/full_screen"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:padding="4dp"
        android:clickable="true"
        android:focusable="true"
        app:tint="@color/white"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_btn"
        app:srcCompat="@drawable/full_size_ic"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/card_recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_img">

        <TextView
            android:id="@+id/tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:fontFamily="@font/poppins"
            android:text="@string/i_am_sample_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/clock"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_below="@id/tittle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/clock_icon"
            app:tint="#019267"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_below="@id/tittle"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/clock"
            android:gravity="center_vertical"
            android:text="@string/_32_mins" />

        <Button
            android:id="@+id/ing_btn"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:text="@string/ingredients"
            android:layout_marginTop="40dp"
            android:layout_below="@id/tittle"
            android:layout_marginStart="34dp"
            android:background='@drawable/btn_ing'
            android:fontFamily="@font/poppins"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_alignParentStart="true"/>

        <ScrollView
            android:id="@+id/ing_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:layout_below="@id/ing_btn">

            <TextView
                android:id="@+id/ing_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:textColor="@color/black"
                android:text=""
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"/>

        </ScrollView>

        <Button
            android:id="@+id/step_btn"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:text="@string/steps"
            android:layout_marginTop="40dp"
            android:layout_below="@id/tittle"
            android:layout_marginEnd="34dp"
            android:background='@drawable/btn_ing'
            android:fontFamily="@font/poppins"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_alignParentEnd="true"/>


        <ScrollView
            android:id="@+id/step_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/step_btn"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/step_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lineSpacingExtra="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="15sp" />

        </ScrollView>

    </RelativeLayout>

    <ImageView
        android:id="@id/go_up"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/scroll_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        tools:ignore="ContentDescription" />






</androidx.constraintlayout.motion.widget.MotionLayout>
